--- a/app/jstyles.scss
+++ b/app/jstyles.scss
@@ -27,6 +27,13 @@ $lab-ymed: #eccf2f;
   margin: 8px;
 }
 
+.lab-imgab-left1 {
+  position: absolute;
+  left: -20px;
+  //top: 70px;
+  width: 100%;
+}
+
 
 
 
