--- a/app/jstyles.scss
+++ b/app/jstyles.scss
@@ -34,7 +34,16 @@ $lab-ymed: #eccf2f;
   width: 100%;
 }
 
+.lab-imgab-right1 {
+  position: absolute;
+  left: 20px;
+  //top: 70px;
+  width: 100%;
+}
 
+.lab-pad-left1 {
+  padding-left: 30px;
+}
 
 
 
