--- a/app/jdesign.css
+++ b/app/jdesign.css
@@ -138,10 +138,13 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /* old font: Raleway */
+    font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 900;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
+    color: #939393;
 }
+
 @media (min-width: 481px) {
     h1 {
         font-size: 52px;
@@ -150,6 +153,7 @@ h6 {
         font-size: 50px;
     }
 }
+
 hr {
     max-width: 90%;
     border-top: 1px solid white;
