--- a/app/jstyles.css
+++ b/app/jstyles.css
@@ -1,6 +1,15 @@
 .j-container {
   background-color: #fbed80; }
 
+.L9-hero-img-centered {
+  position: absolute;
+  padding: 20px;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  width: 33%; }
+
 @media screen and (min-width: 768px) {
   .navbar {
     border-radius: 0; } }
